src/objects/Shop__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corporation__c</fullName>
        <label>Corporation</label>
        <referenceTo>Corporation__c</referenceTo>
        <relationshipLabel>Shops</relationshipLabel>
        <relationshipName>Shops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Director</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shops</relationshipLabel>
        <relationshipName>Shops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue__c</fullName>
        <label>Monthly Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Methods__c</fullName>
        <label>Payment Methods</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shop_Logo__c</fullName>
        <formula>IMAGE( logo_url__c , &quot;Logo&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shop Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebSite_URL__c</fullName>
        <label>WebSite URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>logo_url__c</fullName>
        <label>logo url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Shop</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Shop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shops</pluralLabel>
    <recordTypes>
        <fullName>Supermarket</fullName>
        <active>true</active>
        <description>Can sell goods only offline</description>
        <label>Supermarket</label>
    </recordTypes>
    <recordTypes>
        <fullName>Web_shop</fullName>
        <active>true</active>
        <description>Prepaid shipping</description>
        <label>Web shop</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Blank_Director_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Director__c )</errorConditionFormula>
        <errorDisplayField>Director__c</errorDisplayField>
        <errorMessage>Director field shold not be blank!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Greater_Than_Zero</fullName>
        <active>true</active>
        <errorConditionFormula>Monthly_Revenue__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>Monthly_Revenue__c</errorDisplayField>
        <errorMessage>Monthly Revenue should be greater than 0</errorMessage>
    </validationRules>
</CustomObject>